@@ -219,9 +219,8 @@ under "1.0" are more important.
    filters.  All we'd need is a new Dependent type to manage the
    filter results. ==> Fix SUBTOTAL().
    + Implement `AutoFilter' tool.
-   + Hide the sensitivity of `Show All' if there are no hidden/filtered rows.
    + Implement filter columns???
 
-+ Edit->Fill->Series...
+* Edit->Fill->Series...
 
    + Implement `Fill Series' tool with linear, growth and date filling.
