@@ -1,5 +1,9 @@
 2002-07-26  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
+	* src/sheet.h, src/workbook-control-gui-priv.h,
+	src/workbook-control-gui.c, src/tools/filter.c: Hide the
+	sensitivity of `Show All' if there are no filtered rows.
+
 	* src/workbook-control-gui.c: Added `Filter->Show All'.
 
 2002-07-25  Morten Welinder  <terra@diku.dk>
